--- a/PreferencesKotlin/app/build.gradle
+++ b/PreferencesKotlin/app/build.gradle
@@ -1,30 +1,30 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+apply plugin: "com.android.application"
+apply plugin: "kotlin-android"
 
 android {
-    compileSdk 34
+    compileSdk = 34
     defaultConfig {
-        applicationId "com.example.androidx.preference.sample"
-        minSdkVersion 14
-        targetSdkVersion 34
-        versionCode 1
-        versionName "1.0"
+        applicationId = "com.example.androidx.preference.sample"
+        minSdkVersion (14)
+        targetSdkVersion (34)
+        versionCode = 1
+        versionName = "1.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled (false)
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = "17"
     }
-    namespace 'com.example.androidx.preference.sample'
+    namespace = "com.example.androidx.preference.sample"
 }
 
 dependencies {
-    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation ("androidx.preference:preference-ktx:1.2.1")
 }
