--- a/SliceViewerKotlin/app/build.gradle
+++ b/SliceViewerKotlin/app/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+apply plugin: "com.android.application"
+apply plugin: "kotlin-android"
 
 repositories {
     google()
@@ -7,36 +7,36 @@ repositories {
 }
 
 dependencies {
-    implementation "androidx.slice:slice-view:1.1.0-alpha02"
-    implementation 'androidx.slice:slice-core:1.0.0'
-    implementation 'androidx.slice:slice-builders:1.0.0'
+    implementation ("androidx.slice:slice-view:1.1.0-alpha02")
+    implementation ("androidx.slice:slice-core:1.0.0")
+    implementation ("androidx.slice:slice-builders:1.0.0")
     //noinspection GradleDependency TODO: figure out why the newer versions use `val` for header
-    implementation 'androidx.slice:slice-builders-ktx:1.0.0-alpha3'
-    implementation "androidx.appcompat:appcompat:1.6.1"
-    implementation "androidx.cardview:cardview:1.0.0"
-    implementation "androidx.core:core-ktx:1.13.1"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.8.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-common:2.8.0"
+    implementation ("androidx.slice:slice-builders-ktx:1.0.0-alpha3")
+    implementation ("androidx.appcompat:appcompat:1.7.0")
+    implementation ("androidx.cardview:cardview:1.0.0")
+    implementation ("androidx.core:core-ktx:1.13.1")
+    implementation ("androidx.constraintlayout:constraintlayout:2.1.4")
+    implementation ("androidx.recyclerview:recyclerview:1.3.2")
+    implementation ("androidx.lifecycle:lifecycle-runtime-ktx:2.8.1")
+    implementation ("androidx.lifecycle:lifecycle-extensions:2.2.0")
+    implementation ("androidx.lifecycle:lifecycle-common:2.8.1")
 }
 
 android {
-    compileSdk 34
+    compileSdk = 34
     defaultConfig {
-        applicationId "com.example.android.sliceviewer"
-        minSdkVersion 19
-        targetSdkVersion 34
-        versionCode 1
-        versionName "1.0"
+        applicationId = "com.example.android.sliceviewer"
+        minSdkVersion (21)
+        targetSdkVersion (34)
+        versionCode = 1
+        versionName = "1.0"
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = "17"
     }
-    namespace 'com.example.android.sliceviewer'
+    namespace = "com.example.android.sliceviewer"
 }
