--- a/TextRoundedBackgroundKotlin/app/build.gradle
+++ b/TextRoundedBackgroundKotlin/app/build.gradle
@@ -13,36 +13,36 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+apply plugin: "com.android.application"
+apply plugin: "kotlin-android"
 
 android {
-    compileSdk 34
+    compileSdk = 34
 
     defaultConfig {
-        applicationId "com.android.example.text.styling.roundedbg"
-        minSdkVersion 19
-        targetSdkVersion 34
-        versionCode 1
-        versionName "1.0"
+        applicationId = "com.android.example.text.styling.roundedbg"
+        minSdkVersion (21)
+        targetSdkVersion (34)
+        versionCode = 1
+        versionName = "1.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled (false)
+            proguardFiles(getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro")
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = "17"
     }
-    namespace 'com.android.example.text.styling.roundedbg.app'
+    namespace = "com.android.example.text.styling.roundedbg.app"
 }
 
 dependencies {
-    implementation project(':lib')
-    implementation "androidx.appcompat:appcompat:1.6.1"
+    implementation (project(":lib"))
+    implementation ("androidx.appcompat:appcompat:1.7.0")
 }
