--- a/TextStyling/app/build.gradle
+++ b/TextStyling/app/build.gradle
@@ -13,55 +13,56 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+apply plugin: "com.android.application"
+apply plugin: "kotlin-android"
 
 android {
-    compileSdk 34
+    compileSdk = 34
 
     defaultConfig {
-        applicationId "com.android.example.text.styling"
-        minSdkVersion 19
-        targetSdkVersion 34
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        applicationId = "com.android.example.text.styling"
+        minSdkVersion (21)
+        targetSdkVersion (34)
+        versionCode = 1
+        versionName = "1.0"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             postprocessing {
-                removeUnusedCode false
-                removeUnusedResources false
-                obfuscate false
-                optimizeCode false
-                proguardFile 'proguard-rules.pro'
+                removeUnusedCode = false
+                removeUnusedResources = false
+                obfuscate = false
+                optimizeCode = false
+                proguardFile("proguard-rules.pro")
             }
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = "17"
     }
-    namespace 'com.android.example.text.styling'
+    namespace= "com.android.example.text.styling"
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:1.6.1"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation ("androidx.appcompat:appcompat:1.7.0")
+    implementation ("androidx.constraintlayout:constraintlayout:2.1.4")
 
     // Dependencies for local unit tests
-    testImplementation "junit:junit:4.13.2"
+    testImplementation ("junit:junit:4.13.2")
 
-    androidTestImplementation "org.mockito:mockito-core:4.6.1"
-    androidTestImplementation "androidx.test:runner:1.5.2"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
-    androidTestImplementation "com.google.dexmaker:dexmaker:1.2"
-    androidTestImplementation "com.google.dexmaker:dexmaker-mockito:1.2"
-    implementation 'androidx.core:core-ktx:1.13.1'
+    androidTestImplementation ("org.mockito:mockito-core:4.6.1")
+    androidTestImplementation ("androidx.test:runner:1.5.2")
+    androidTestImplementation ("androidx.test.espresso:espresso-core:3.5.1")
+    androidTestImplementation ("com.google.dexmaker:dexmaker:1.2")
+    androidTestImplementation ("com.google.dexmaker:dexmaker-mockito:1.2")
+    implementation ("androidx.core:core-ktx:1.13.1")
 }
 repositories {
+    google()
     mavenCentral()
 }
