--- a/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
+++ b/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri 07 Jun 2024 06:11:45 AM EDT
+#Sun Jul 14 05:16:01 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
