--- a/DownloadableFontsKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/DownloadableFontsKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Jul 14 06:18:56 AM EDT 2024
+#Fri Jul 26 03:47:21 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
