--- a/ElevationBasic/gradle/wrapper/gradle-wrapper.properties
+++ b/ElevationBasic/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Jul 14 06:48:27 AM EDT 2024
+#Fri Jul 26 03:56:09 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
