--- a/ElevationDrag/gradle/wrapper/gradle-wrapper.properties
+++ b/ElevationDrag/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Jul 26 03:59:52 EDT 2024
+#Mon Aug  5 05:15:38 AM EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
