--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Aug 15 03:45:11 EDT 2024
+#Sat Aug 24 06:06:54 AM EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-all.zip
 distributionPath=wrapper/dists
